--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,18 @@
 							</svg></a></li>
 				</ul>
 			</div>
+			<div>
+				<p class="subscribe-header">Subscribe</p>
+				<form name="subscribe-form">
+					<input type="email" name="email" placeholder="E-mail" class="input-subscribe">
+					<button type="submit" class="button subscribe-btn"><span class="btn-group"> Subscribe <svg width="24px" height="20px" class="send-icon">
+						<use href="./images/icons.svg#icon-send"></use>
+					</svg></span> </button>
+				</form>
+
+			</div>
 		</div>
+		
 	</footer>
 </body>
 
