--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 				</p>
 			</div>
 			<div>
-				<p class="footer-text soc-med-header">Social media</p>
+				<p class="soc-med-header">Social media</p>
 				<ul class=" list soc-med-list-footer">
 					<li class=" social-media-item"> <a href="" class="social-media-link-footer"><svg width="24px"
 								height="24px">
@@ -301,9 +301,9 @@
 							</svg></a></li>
 				</ul>
 			</div>
-			<div>
+			<div class="subscr">
 				<p class="subscribe-header">Subscribe</p>
-				<form name="subscribe-form">
+				<form name="subscribe-form" class="subscribe-form">
 					<input type="email" name="email" placeholder="E-mail" class="input-subscribe">
 					<button type="submit" class="button subscribe-btn"><span class="btn-group"> Subscribe <svg width="24px" height="20px" class="send-icon">
 						<use href="./images/icons.svg#icon-send"></use>
@@ -334,7 +334,7 @@
 					<label for="tell" class="form-label">Phone</label>
 					<div class="input-icon-group">
 						<input type="tel" id="tell" name="tell" class="form-input">
-						<svg width="18px" height="18px" class="input-icon">
+						<svg width="18px" height="24px" class="input-icon">
 							<use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
 						</svg>
 					</div>
@@ -343,7 +343,7 @@
 					<label for="email" class="form-label">Email</label>
 					<div class="input-icon-group">
 						<input type="email" id="email" name="email" class="form-input">
-						<svg width="18px" height="18px" class="input-icon">
+						<svg width="18px" height="24px" class="input-icon">
 							<use href="./images/icons.svg#icon-email-black-18dp-1"></use>
 						</svg>
 					</div>
