--- a/portfolio.html
+++ b/portfolio.html
@@ -230,7 +230,7 @@
 				</p>
 			</div>
 			<div>
-				<p class="footer-text soc-med-header">Social media</p>
+				<p class="soc-med-header">Social media</p>
 				<ul class=" list soc-med-list-footer">
 					<li class=" social-media-item"> <a href="" class="social-media-link-footer"><svg width="24px"
 								height="24px">
@@ -250,9 +250,9 @@
 							</svg></a></li>
 				</ul>
 			</div>
-			<div>
+			<div class="subscr">
 				<p class="subscribe-header">Subscribe</p>
-				<form name="subscribe-form">
+				<form name="subscribe-form" class="subscribe-form">
 					<input type="email" name="email" placeholder="E-mail" class="input-subscribe">
 					<button type="submit" class="button subscribe-btn"><span class="btn-group"> Subscribe <svg width="24px" height="20px" class="send-icon">
 						<use href="./images/icons.svg#icon-send"></use>
